XO_Project_UAT/Project--XOGrp--UAT/src/objects/CRMfusionDBR101__Duplicate_Blocked__e.object
<CustomObject>
    <description>Duplicate record creation blocked by DupeBlocker.</description>
    <fields>
        <fullName>CRMfusionDBR101__Allow_Block_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Block Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Duplicates_Data__c</fullName>
        <description>JSON string containing matching groups for blocks and matching Ids &amp; Names for redirects.</description>
        <label>Duplicates Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Redirect_Url__c</fullName>
        <label>Redirect Url</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Redirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Id__c</fullName>
        <description>Id of the scenario that triggered the block.</description>
        <label>Scenario Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Name__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Duplicate Blocked</label>
    <pluralLabel>Duplicates Blocked</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>